# submillisecond

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: router.rs
examples/: catch_all.rs  cookies.rs  custom_handler.rs  extractors.rs  foo.rs  guard.rs  hello_world.rs  list_routing.rs  logging.rs  middleware.rs  panic.rs  params.rs  queue_todo.rs  stack_todo.rs  state.rs  static.rs  timeout.rs  websocket.rs
examples/queue_todo/: dtos.rs  file_log.rs  main.rs  middleware.rs  persistence.rs
examples/queue_todo/auth/: auth_manager.rs  mod.rs  session.rs  structures.rs
examples/queue_todo/chat/: chat_process.rs  mod.rs  polling.rs  structures.rs
examples/queue_todo/profile/: mod.rs  profile_manager.rs  structure.rs
src/: app.rs  cookies.rs  core.rs  defaults.rs  error.rs  extract.rs  guard.rs  handler.rs  json.rs  layers.rs  lib.rs  macros.rs  middleware.rs  params.rs  process_local.rs  reader.rs  request.rs  request_context.rs  response.rs  router.rs  session.rs  state.rs  supervisor.rs  typed_header.rs  uri_reader.rs  util.rs  websocket.rs
src/extract/: body.rs  header_map.rs  host.rs  json.rs  method.rs  params.rs  path.rs  query.rs  rejection.rs  request.rs  route.rs  splat.rs  state.rs  string.rs  typed_header.rs  vec.rs
src/extract/path/: de.rs
src/middleware/: cookies.rs
src/response/: into_response.rs  into_response_parts.rs
src/router/: url_params.rs
submillisecond/: Cargo.toml
submillisecond-macros/: Cargo.toml
submillisecond-macros/src/: lib.rs  named_param.rs
submillisecond-macros/src/router/: trie.rs
submillisecond/src/: defaults.rs  error.rs  extract.rs  guard.rs  handler.rs  macros.rs  params.rs  request.rs  template.rs
submillisecond/src/extract/: header_map.rs  json.rs  method.rs  params.rs  path.rs  query.rs  rejection.rs  request.rs  route.rs  vec.rs
submillisecond/src/response/: into_response.rs  into_response_parts.rs
submillisecond_core/: Cargo.toml
submillisecond_core/src/: lib.rs  params.rs  router.rs
submillisecond_core/src/router/: error.rs  params.rs  tree.rs
submillisecond_macros/: Cargo.toml
submillisecond_macros/src/: lib.rs  named_param.rs  route.rs  router.rs  static_dir.rs  static_router.rs  trie.rs
submillisecond_macros/src/router/: item_catch_all.rs  item_route.rs  item_use_middleware.rs  item_with_middleware.rs  list.rs  method.rs  router_trie.rs  tree.rs  trie.rs
submillisecond_macros/src/router/tree/: item_catch_all.rs  item_route.rs  item_use_middleware.rs  method.rs  method_tries.rs  router_trie.rs  trie.rs
tests/: parsing_http_1_1.rs  pipelining.rs  router.rs  websocket.rs
