[package]
edition = "2021"
name = "submillisecond"
version = "0.1.0"
description = "A lunatic web framework for Rust."
keywords = ["http", "web", "framework"]
categories = ["network-programming", "web-programming"]
license = "Apache-2.0/MIT"
readme = "Readme.md"
repository = "https://github.com/lunatic-solutions/submillisecond"

[dependencies]
askama = "0.11"
headers = "0.3"
http = "0.2.7"
httparse = "1.7.1"
lunatic = "0.9.1"
mime = "0.3.16"
paste = "1.0"
percent-encoding = "2.1"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
submillisecond_macros = {version = "0.1", path = "submillisecond_macros"}

[dev-dependencies]
base64 = "0.13.0"
criterion = {git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false}
lunatic-test = "0.9"
ron = "0.7"
uuid = {version = "1.0.0", features = ["v4", "serde"]}

[[bench]]
harness = false
lunatic-test = "0.9"
name = "router"

[workspace]
members = [".", "submillisecond_macros"]