[package]
name = "submillisecond"
version = "0.2.0"
edition = "2021"
description = "A lunatic web framework for Rust."
keywords = ["http", "web", "framework"]
categories = ["network-programming", "web-programming"]
license = "Apache-2.0/MIT"
readme = "Readme.md"
repository = "https://github.com/lunatic-solutions/submillisecond"

[workspace]
members = ["submillisecond_macros"]

[features]
default = ["logging"]
cookies = ["dep:cookie", "serde_json"]
json = ["serde_json"]
logging = ["ansi_term", "lunatic-log"]
query = ["serde_urlencoded"]
template = ["askama"]
websocket = ["base64ct", "sha1", "tungstenite"]

[dependencies]
headers = "0.3"
http = "0.2.7"
httparse = "1.7.1"
lunatic = "0.12"
mime = "0.3.16"
paste = "1.0"
percent-encoding = "2.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_bytes = "0.11"
submillisecond_macros = { version = "0.2.1", path = "submillisecond_macros" }

# optional dependencies
ansi_term = { version = "0.12", optional = true }
askama = { version = "0.11", optional = true }
base64ct = { version = "1.5", features = ["alloc"], optional = true }
cookie = { version = "0.16", features = [
  "percent-encode",
  "signed",
  "private",
], optional = true }
lunatic-log = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
sha1 = { version = "0.10", optional = true }
tungstenite = { version = "0.17", optional = true }


[dev-dependencies]
base64 = "0.13.0"
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false }
submillisecond = { path = ".", features = [
  "cookies",
  "json",
  "logging",
  "query",
  "websocket",
] } # for examples
ron = "0.8"
uuid = { version = "1.0.0", features = ["v4", "serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-wasi"]

[[bench]]
harness = false
name = "router"
