[package]
edition = "2021"
name = "submillisecond_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
radix_trie = "0.2.1"
regex = "1.5.6"
rust-format = {version = "0.3", features = ["token_stream"]}
submillisecond_core = {path = "../submillisecond_core"}
syn = {version = "1.0", features = ["derive", "extra-traits", "full"]}
