[package]
edition = "2021"
name = "submillisecond_macros"
description = "Macros used by the submillisecond web framework."
version = "0.1.0"
license = "Apache-2.0/MIT"
repository = "https://github.com/lunatic-solutions/submillisecond/tree/main/submillisecond_macros"

[lib]
proc-macro = true

[dependencies]
better-bae = "0.1"
lazy_static = "1.4.0"
mime_guess = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5.6"
rust-format = {version = "0.3", features = ["token_stream"]}
syn = {version = "1.0", features = ["derive", "extra-traits", "full"]}
